# xdgkit

./: .gitignore  Cargo.toml  README.md  TODO  freedesktop_desktop_entry
src/: basedir.rs  categories.rs  categories.rs.bak  cli.yaml  coder.bash  desktop_entry.rs  desktop_menu.rs  icon_finder.rs  icon_theme.rs  lib.rs  main.rs  menu.rs  mime.rs  recently_used.rs  user_dirs.rs  user_places.rs  utils.rs  xbel.rs
tests/: applications.menu  recently-used.xbel  test.desktop  xedit.desktop
tests/desktop-directories/: jwm-applications.directory  jwm-home.directory
